fix: use npm install instead of npm ci for better compatibility

--- a/.github/workflows/pr-review.yml
+++ b/.github/workflows/pr-review.yml
@@ -25,12 +25,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18'
-          cache: 'npm'
-          cache-dependency-path: 'agent/package-lock.json'
 
       - name: Install dependencies
         working-directory: ./agent
-        run: npm ci
+        run: npm install
 
       - name: Run PR Review
         if: github.event_name == 'pull_request'
