fix: simplify workflow to use local file analysis

--- a/.github/workflows/pr-review.yml
+++ b/.github/workflows/pr-review.yml
@@ -32,196 +32,10 @@ jobs:
 
       - name: Run PR Review
         if: github.event_name == 'pull_request'
-        uses: actions/github-script@v6
-        with:
-          script: |
-            const fs = require('fs');
-            const path = require('path');
-            
-            // Load analyzers
-            const JavaAnalyzer = require('./agent/src/analyzers/javaAnalyzer.js');
-            const ReactAnalyzer = require('./agent/src/analyzers/reactAnalyzer.js');
-            
-            // Get PR details
-            const prNumber = context.issue.number;
-            const owner = context.repo.owner;
-            const repo = context.repo.repo;
-            
-            console.log(`\n=== Reviewing PR #${prNumber} ===`);
-            
-            // Get changed files
-            const { data: files } = await github.rest.pulls.listFiles({
-              owner,
-              repo,
-              pull_number: prNumber
-            });
-            
-            const reviews = [];
-            const analyzedFiles = [];
-            
-            // Analyze each file
-            for (const file of files) {
-              const filename = file.filename;
-              const patch = file.patch || '';
-              
-              console.log(`Analyzing: ${filename}`);
-              analyzedFiles.push(filename);
-              
-              // Get full file content
-              let fileContent = '';
-              try {
-                const fileResponse = await github.rest.repos.getContent({
-                  owner,
-                  repo,
-                  path: filename,
-                  ref: context.payload.pull_request.head.sha
-                });
-                fileContent = Buffer.from(fileResponse.data.content, 'base64').toString('utf-8');
-              } catch (err) {
-                console.log(`Could not fetch ${filename}: ${err.message}`);
-                continue;
-              }
-              
-              // Java files
-              if (filename.endsWith('.java')) {
-                const javaReview = JavaAnalyzer.analyze(fileContent, filename);
-                if (javaReview && javaReview.issues && javaReview.issues.length > 0) {
-                  reviews.push(...javaReview.issues);
-                }
-              }
-              
-              // React/JS/TS files
-              if (filename.match(/\.(jsx?|tsx?)$/)) {
-                const reactReview = ReactAnalyzer.analyze(fileContent, filename);
-                if (reactReview && reactReview.issues && reactReview.issues.length > 0) {
-                  reviews.push(...reactReview.issues);
-                }
-              }
-            }
-            
-            // Filter issues only from changed lines
-            const changedReviews = reviews.filter(review => {
-              // Only include issues that are relevant to the PR
-              return review && review.file && review.line;
-            });
-            
-            console.log(`Found ${changedReviews.length} issues across ${analyzedFiles.length} files`);
-            
-            // Post summary comment
-            const summary = createSummary(changedReviews, analyzedFiles);
-            await github.rest.issues.createComment({
-              owner,
-              repo,
-              issue_number: prNumber,
-              body: summary
-            });
-            
-            // Post inline comments if not too many
-            if (changedReviews.length > 0 && changedReviews.length <= 20) {
-              const byFile = {};
-              changedReviews.forEach(review => {
-                if (!byFile[review.file]) byFile[review.file] = [];
-                byFile[review.file].push(review);
-              });
-              
-              for (const [file, issues] of Object.entries(byFile)) {
-                for (const issue of issues) {
-                  if (issue.line) {
-                    const comment = formatComment(issue);
-                    try {
-                      await github.rest.pulls.createReviewComment({
-                        owner,
-                        repo,
-                        pull_number: prNumber,
-                        body: comment,
-                        commit_id: context.payload.pull_request.head.sha,
-                        path: file,
-                        line: issue.line
-                      });
-                    } catch (err) {
-                      console.warn(`Could not post inline comment for ${file}:${issue.line}`);
-                    }
-                  }
-                }
-              }
-            }
-            
-            console.log('Review complete');
-            
-            function formatComment(review) {
-              const severityEmoji = {
-                'error': '❌',
-                'warning': '⚠️',
-                'info': 'ℹ️'
-              };
-              
-              let comment = `${severityEmoji[review.severity] || '📝'} **${review.rule}**\n\n`;
-              comment += `${review.message}\n`;
-              if (review.suggestion) {
-                comment += `\n💡 ${review.suggestion}`;
-              }
-              return comment;
-            }
-            
-            function createSummary(reviews, files) {
-              const errors = reviews.filter(r => r.severity === 'error').length;
-              const warnings = reviews.filter(r => r.severity === 'warning').length;
-              const infos = reviews.filter(r => r.severity === 'info').length;
-              const total = reviews.length;
-              
-              let summary = `## 🤖 Automated Code Review\n\n`;
-              summary += `**Files Analyzed:** ${files.length}\n\n`;
-              
-              summary += `### Review Summary\n`;
-              summary += `| Severity | Count |\n`;
-              summary += `|----------|-------|\n`;
-              summary += `| ❌ Errors | ${errors} |\n`;
-              summary += `| ⚠️ Warnings | ${warnings} |\n`;
-              summary += `| ℹ️ Info | ${infos} |\n`;
-              summary += `| **Total** | **${total}** |\n\n`;
-              
-              if (total === 0) {
-                summary += `✅ **Great job!** No issues found in your code.\n`;
-              } else if (errors === 0) {
-                summary += `✅ **No critical errors!** Please review the warnings and suggestions below.\n`;
-              } else {
-                summary += `⚠️ **Please fix the ${errors} error(s) before merging.**\n`;
-              }
-              
-              if (total > 0) {
-                summary += `\n### Top Issues\n\n`;
-                const byFile = {};
-                reviews.forEach(r => {
-                  if (!byFile[r.file]) byFile[r.file] = [];
-                  byFile[r.file].push(r);
-                });
-                
-                for (const [file, issues] of Object.entries(byFile)) {
-                  const fileErrors = issues.filter(i => i.severity === 'error').length;
-                  const fileWarnings = issues.filter(i => i.severity === 'warning').length;
-                  summary += `\n**${file}** (${fileErrors} errors, ${fileWarnings} warnings)\n`;
-                  
-                  issues.slice(0, 5).forEach(issue => {
-                    const emoji = {'error': '❌', 'warning': '⚠️', 'info': 'ℹ️'}[issue.severity] || '📝';
-                    summary += `- ${emoji} Line ${issue.line}: ${issue.rule}\n`;
-                  });
-                  
-                  if (issues.length > 5) {
-                    summary += `- ... and ${issues.length - 5} more\n`;
-                  }
-                }
-              }
-              
-              summary += `\n---\n`;
-              summary += `📖 [View PR Review Agent](https://github.com/bsimulator/pr-review-agent)\n`;
-              
-              return summary;
-            }
-
-      - name: Run Code Review on Push
-        if: github.event_name == 'push'
-        uses: actions/github-script@v6
-        with:
-          script: |
-            console.log('Code review on push - checking recent commits');
-            // Can implement commit message analysis or other checks here
+        working-directory: ./agent
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PR_NUMBER: ${{ github.event.pull_request.number }}
+          REPO_OWNER: ${{ github.repository_owner }}
+          REPO_NAME: ${{ github.event.repository.name }}
+        run: node src/index.js
