--- a/.github/workflows/code-review-agent.yml
+++ b/.github/workflows/code-review-agent.yml
@@ -56,7 +56,7 @@ jobs:
           cd $GITHUB_WORKSPACE/analyzer/agent
           npm install --production 2>/dev/null || true
           
-          node << 'SCRIPT_END'
+          node << 'SCRIPT_END' > /tmp/review.txt
           const fs = require('fs');
           const javaAnalyzer = require('./src/analyzers/javaAnalyzer.js');
           
@@ -93,36 +93,44 @@ jobs:
           if (totalIssues === 0) {
             review = '## 🤖 Automated Code Review\n\n✅ No issues found!';
           } else {
-            review += `### Summary\n- **Total Issues**: ${totalIssues}`;
+            review += `\n### Summary\n- **Total Issues**: ${totalIssues}`;
           }
           
           console.log(review);
-          process.stdout.write(review);
           SCRIPT_END
           
           echo "ANALYSIS_COMPLETE=true" >> $GITHUB_ENV
 
 
       - name: Post Review Comment
-        if: github.event_name == 'pull_request'
+        if: env.ANALYSIS_COMPLETE == 'true'
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const reviewComment = `## 🤖 Automated Code Review (Java)
+            const fs = require('fs');
             
-✅ Code analysis completed successfully!
-
-All files have been analyzed for violations of 78 advanced Java rules.`;
+            // Read the review comment from file
+            let reviewComment = '## 🤖 Automated Code Review\n\n✅ Analysis completed!';
+            try {
+              if (fs.existsSync('/tmp/review.txt')) {
+                reviewComment = fs.readFileSync('/tmp/review.txt', 'utf8');
+              }
+            } catch (e) {
+              console.log('Could not read review file, using default comment');
+            }
+            
+            console.log('Posting comment with content length:', reviewComment.length);
             
             try {
-              github.rest.issues.createComment({
+              const result = await github.rest.issues.createComment({
                 issue_number: context.issue.number,
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 body: reviewComment
               });
-              console.log('Posted review comment successfully');
+              console.log('✅ Posted review comment successfully (ID: ' + result.data.id + ')');
             } catch (error) {
-              console.error('Error posting comment:', error);
+              console.error('❌ Error posting comment:', error.message);
+              process.exit(1);
             }
